CR: comments